# level-editor-framework

./: .gitignore  LICENSE.md  README.md
Game/: CMakeLists.txt  build.bat
Game/include/game/core/: core.hpp  timemanager.hpp
Game/include/game/graphics/: render.hpp  shader.hpp
Game/include/game/graphics/gui/: gui.hpp
Game/include/game/graphics/shapes/: gameobject.hpp  pointlight.hpp  spotlight.hpp
Game/include/game/utils/: stringutils.hpp
Game/src/game/: main.cpp
Game/src/game/core/: core.cpp  input.cpp  timemanager.cpp
Game/src/game/graphics/: render.cpp  shader.cpp  texture.cpp
Game/src/game/graphics/gui/: gui.cpp
Game/src/game/graphics/shapes/: billboard.cpp  cube.cpp  gameobject.cpp  pointlight.cpp  spotlight.cpp
Game/src/game/utils/: stringutils.cpp
Level editor/: CMakeLists.txt  build.bat
Level editor/include/project/core/: core.hpp  input.hpp
Level editor/include/project/file/: configfile.hpp  fileexplorer.hpp  levelfile.hpp
Level editor/include/project/graphics/: grid.hpp  render.hpp  texture.hpp
Level editor/include/project/graphics/gui/: gui.hpp  gui_compile.hpp  gui_inspector.hpp  gui_scenehierarchy.hpp  gui_settings.hpp
Level editor/include/project/graphics/shapes/: billboard.hpp  cube.hpp  gameobject.hpp  model.hpp  selectedobjectaction.hpp  selectedobjectborder.hpp
Level editor/include/project/physics/: collision.hpp  selectobject.hpp
Level editor/include/project/utils/: fileutils.hpp  stringutils.hpp
Level editor/src/project/: main.cpp
Level editor/src/project/core/: core.cpp  input.cpp  timemanager.cpp
Level editor/src/project/file/: configfile.cpp  fileexplorer.cpp  levelfile.cpp
Level editor/src/project/graphics/: grid.cpp  render.cpp  shader.cpp  texture.cpp
Level editor/src/project/graphics/gui/: gui.cpp  gui_compile.cpp  gui_inspector.cpp  gui_scenehierarchy.cpp  gui_settings.cpp
Level editor/src/project/graphics/shapes/: billboard.cpp  cube.cpp  gameobject.cpp  model.cpp  pointlight.cpp  selectedobjectaction.cpp  selectedobjectborder.cpp  spotlight.cpp
Level editor/src/project/physics/: collision.cpp  selectobject.cpp
Level editor/src/project/utils/: fileutils.cpp  stringutils.cpp
